Update compile options to new syntax